--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,21 @@
 body{
   font-weight: 300;
-  font-family: futura bold font;
+  font-family: 'Roboto', sans-serif;
 }
 h1{
   font-weight: bold;
+  color: rgb(59,89,152);
 }
 /*Clases reutilizables*/
 .flex-direction-column{
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
+}
+.flex{
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 .content-box {
@@ -48,7 +54,7 @@ footer ul.ulf-padding-btm{
   padding-bottom: 40px;
 }
 .background-gray{
-  background-color: rgba(52,58,64,0.05);  //rgba(140,120,120,0.05);
+  background-color: rgba(52,58,64,0.05);
 }
 /*Estilos para navbar*/
 .logo-gib{
@@ -67,6 +73,9 @@ nav.navbar.navbar-default.nav-margin-btn-0{
   border-color: transparent;
   margin-bottom: 0px;
 }
+nav{
+   box-shadow: 2px 2px 10px #666;
+}
 nav.padding-nav{
   padding-top: 10px;
   padding-bottom: 10px;
@@ -80,24 +89,27 @@ nav.padding-nav{
 nav#navbar{
   -webkit transition: background-color .5s;
 }
-.black{
-color: #322323;
+.blue{
+color: rgb(59,89,152);
 }
-.navbar-default .navbar-nav>li>a.black{
-  color: #322323;
+.navbar-default .navbar-nav>li>a.blue{
+  color: rgb(59,89,152);
 }
-.navbar-default .navbar-toggle .icon-bar.color-black{
-  background-color: #322323;
+.navbar-default .navbar-nav>li>a.blue:hover{
+  color: #000;
 }
-.navbar-default .navbar-nav>.open>a.black, .navbar-default .navbar-nav>.open>a.black:focus, .navbar-default{
-  color: #322323;
+.navbar-default .navbar-toggle .icon-bar.color-blue{
+  background-color: rgb(59,89,152);
+}
+.navbar-default .navbar-nav>.open>a.blue{
+  color: rgb(59,89,152);
   background-color: transparent;
 }
 .navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a{
   background-color: transparent;
 }
-.navbar-default .navbar-nav .open .dropdown-menu>li>a.black{
-  color: #322323;
+.navbar-default .navbar-nav .open .dropdown-menu>li>a.blue{
+  color: rgb(59,89,152);
 }
 /*Estilos hero*/
 section div.container-fluid.container-padding-0, div.col-xs-12.container-padding-0{
@@ -120,7 +132,7 @@ div.item.height-img-movile img{
 .card-contact{
   padding: 30px;
   border-radius: 50px;
-  border: 3px solid rgb(231,231,231);
+  border: 3px solid rgba(59,89,152,0.8);
 }
 .border-radius{
   border-radius: 90px;
@@ -140,15 +152,25 @@ footer{
   .content-box-section3{
     padding-bottom: 0px;
   }
+  .padding-second-section{
+    padding: 70px;
+  }
+
+  .flex-five-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 @media (min-width: 992px){
 
-
 }
 
 @media (min-width: 1200px){
-  .flex-direction-column{
-    flex-direction: initial;
+  .flex-direction{
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
