--- a/views/services-products.html
+++ b/views/services-products.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#6e268b"/>
     <!--Logo pequeño que estará ubciado en la pestaña-->
     <link rel="icon" type="image/png" href="../assets/images/icon.png">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <!-- Mi css -->
@@ -37,13 +38,14 @@
                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
                  <ul class="nav navbar-nav navbar-right">
                    <li class="dropdown">
-                     <a href="#" class="dropdown-toggle black" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Por qué Gib-Solutions <span class="caret"></span> </a>
+                     <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
-                        <li><a href="#" class="black">Sobre Gib-Solutions</a></li>
-                     </ul>
+                        <li><a href="../index.html" class="blue"><strong>Sobre Gib-Solutions</strong></a></li>
+                        <li><a href="../index.html" class="blue"><strong>¿Quiénes somos?</strong></a></li>
+                      </ul>
                    </li>
-                   <li><a href="#" class="black">Nuestros servicios y productos</a></li>
-                   <li><a href="#" class="black">Contáctenos</a></li>
+                   <li><a href="views/services-products.html" class="blue"><strong>Nuestros servicios y productos</strong></a></li>
+                   <li><a href="../index.html" class="blue"><strong>Contáctenos</strong></a></li>
                  </ul>
                </div>
              </div>
@@ -63,17 +65,17 @@
         </div>
         <div class="row">
           <div class="flex-direction-inline margin-top-70">
-            <div class="col-lg-4 col-sm-3">
+            <div class="col-lg-4 col-sm-4">
               <div class="flex-direction-column style-box-services">
                 <h3 class="center-align">Soporte técnico en soluciones de monitoreo.</h3>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-3">
+            <div class="col-lg-4 col-sm-4">
               <div class="flex-direction-column style-box-services">
                 <h3 class="center-align">Consultoría TI en soluciones de monitoreo.</h3>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-3">
+            <div class="col-lg-4 col-sm-4">
               <div class="flex-direction-column style-box-services">
                 <h3 class="center-align">Capacitaciones en soluciones de monitoreo (Solarwinds, Pandora, Dynatrace).</h3>
               </div>
