--- a/css/main2.css
+++ b/css/main2.css
@@ -5,13 +5,17 @@
 }
 
 .style-box-services{
+  background-color: rgba(59,89,152,0.8);
   border: 2px solid rgba(59,89,152,0.8);
   border-radius: 50px;
   margin-bottom: 30px;
   height: 220px;
   padding: 10px;
 }
-
+.letter-services{
+  color: white;
+  font-weight: bold;
+}
 .padding-box-products{
   padding: 50px 0px;
 }
