--- a/views/services-products.html
+++ b/views/services-products.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left" href="#"><img src="../assets/images/logo.png" alt="Logo Gib-Solutions" class="logo-gib"></a>
+                 <a class="navbar-brand pull-left" href="#"><img src="../assets/images/logo.jpg" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
@@ -67,17 +67,17 @@
           <div class="flex-direction-inline margin-top-70">
             <div class="col-lg-4 col-sm-4">
               <div class="flex-direction-column style-box-services">
-                <h3 class="center-align">Soporte técnico en soluciones de monitoreo.</h3>
+                <h3 class="center-align letter-services">Soporte técnico en soluciones de monitoreo.</h3>
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
               <div class="flex-direction-column style-box-services">
-                <h3 class="center-align">Consultoría TI en soluciones de monitoreo.</h3>
+                <h3 class="center-align letter-services">Consultoría TI en soluciones de monitoreo.</h3>
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
               <div class="flex-direction-column style-box-services">
-                <h3 class="center-align">Capacitaciones en soluciones de monitoreo (Solarwinds, Pandora, Dynatrace).</h3>
+                <h3 class="center-align letter-services">Capacitaciones en soluciones de monitoreo (Solarwinds, Pandora, Dynatrace).</h3>
               </div>
             </div>
           </div>
