--- a/views/services-products.html
+++ b/views/services-products.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="../assets/images/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
     <!-- Mi css -->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
