--- a/views/services-products.html
+++ b/views/services-products.html
@@ -21,12 +21,12 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 padding-nav navbar-fixed-top">
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top">
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+                <div class="navbar-header padding-nav">
                   <button class="collapsed navbar-toggle btn-no-border btn-no-background" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -37,17 +37,19 @@
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
-               <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
+               <div class="navbar-collapse bs-example-js-navbar-collapse collapse padding-nav" aria-expanded="false">
                  <ul class="nav navbar-nav navbar-right">
                    <li class="dropdown">
                      <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
-                        <li><a href="../index.html" class="blue"><strong>Sobre Gib-Solutions</strong></a></li>
-                        <li><a href="../index.html" class="blue"><strong>¿Quiénes somos?</strong></a></li>
+                        <li><a href="#" class="blue" id="about-gs"><strong>Sobre Gib-Solutions</strong></a></li>
+                        <li><a href="#" class="blue" id="about-us-gs"><strong>¿Quiénes somos?</strong></a></li>
+                        <li><a href="##" class="blue" id="objectives-gs"><strong>Nuestros objetivos</strong></a></li>
+                        <li><a href="##" class="blue" id="clients-gs"><strong>Nuestros clientes</strong></a></li>
                       </ul>
                    </li>
-                   <li><a href="views/services-products.html" class="blue"><strong>Nuestros servicios y productos</strong></a></li>
-                   <li><a href="../index.html" class="blue"><strong>Contáctenos</strong></a></li>
+                   <li><a href="services-products.html" class="blue"><strong>Nuestros servicios y productos</strong></a></li>
+                   <li><a href="#" class="blue" id="contact-us-gs"><strong>Contáctenos</strong></a></li>
                  </ul>
                </div>
              </div>
@@ -62,6 +64,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h1 class="center-align">Nuestros servicios</h1>
+            <hr class="hr-style-gib">
             <br>
           </div>
         </div>
@@ -93,6 +96,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h1 class="center-align">Nuestros productos</h1>
+            <hr class="hr-style-gib">
             <br>
           </div>
         </div>
