--- a/views/services-products.html
+++ b/views/services-products.html
@@ -8,7 +8,7 @@
     <!--Color de barra de navegación que sólo se verá en versión movile-->
     <meta name="theme-color" content="#6e268b"/>
     <!--Logo pequeño que estará ubciado en la pestaña-->
-    <link rel="icon" type="image/png" href="../assets/images/icon.png">
+    <link rel="icon" type="image/png" href="../assets/images/logo-gs.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.css">
@@ -21,23 +21,23 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top">
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav">
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header padding-nav">
+                <div class="navbar-header">
                   <button class="collapsed navbar-toggle btn-no-border btn-no-background" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left" href="../index.html"><img src="../assets/images/logo.jpg" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
+                 <a class="navbar-brand pull-left padding-0" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
-               <div class="navbar-collapse bs-example-js-navbar-collapse collapse padding-nav" aria-expanded="false">
+               <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
                  <ul class="nav navbar-nav navbar-right">
                    <li class="dropdown">
                      <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
