--- a/views/services-products.html
+++ b/views/services-products.html
@@ -21,7 +21,7 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav">
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
@@ -42,14 +42,14 @@
                    <li class="dropdown">
                      <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
-                        <li><a href="#" class="blue" id="about-gs"><strong>Sobre Gib-Solutions</strong></a></li>
-                        <li><a href="#" class="blue" id="about-us-gs"><strong>¿Quiénes somos?</strong></a></li>
-                        <li><a href="##" class="blue" id="objectives-gs"><strong>Nuestros objetivos</strong></a></li>
-                        <li><a href="##" class="blue" id="clients-gs"><strong>Nuestros clientes</strong></a></li>
+                        <li><a href="#" class="blue" id="about-gs" data-scroll><strong>Sobre Gib-Solutions</strong></a></li>
+                        <li><a href="#" class="blue" id="about-us-gs" data-scroll><strong>¿Quiénes somos?</strong></a></li>
+                        <li><a href="##" class="blue" id="objectives-gs" data-scroll><strong>Nuestros objetivos</strong></a></li>
+                        <li><a href="##" class="blue" id="clients-gs" data-scroll><strong>Nuestros clientes</strong></a></li>
                       </ul>
                    </li>
-                   <li><a href="services-products.html" class="blue"><strong>Nuestros servicios y productos</strong></a></li>
-                   <li><a href="#" class="blue" id="contact-us-gs"><strong>Contáctenos</strong></a></li>
+                   <li><a href="services-products.html" class="blue" data-scroll><strong>Nuestros servicios y productos</strong></a></li>
+                   <li><a href="#" class="blue" id="contact-us-gs" data-scroll><strong>Contáctenos</strong></a></li>
                  </ul>
                </div>
              </div>
@@ -151,5 +151,13 @@
     <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.js"></script>
     <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
+    <!--Scroll-->
+    <script src="vendor/smooth-scroll.min.js"></script>
+    <script>
+       var scroll = new SmoothScroll('a[href*="#"]');
+	     var scroll = new SmoothScroll('.some-selector',{
+		   header: '[data-scroll-header]'
+	     });
+    </script>
   </body>
 </html>
