--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,14 @@ footer ul.ulf-padding-btm{
 .background-gray{
   background-color: rgba(52,58,64,0.05);
 }
+img.filter-img{
+  filter: contrast(60%);
+  -webkit-filter: contrast(60%);
+}
 /*Estilos para navbar*/
-.logo-gib{
-  width: 95px;
-  height: 100%;
+a.navbar-brand.pull-left.padding-0.logo-gib{
+  width: 5rem;
+  height: 5rem;
 }
 button.navbar-toggle.btn-no-background, .navbar-toggle.navbar-toggle:hover{
   background-color: inherit;
@@ -90,6 +94,9 @@ nav.padding-nav{
 }
 a.navbar-brand.pull-left.padding-0{
   padding: 0;
+}
+.padding-navbar{
+  padding: 1rem;
 }
 
 /*Efectos en navbar*/
@@ -184,6 +191,15 @@ footer{
     align-items: center;
     justify-content: center;
   }
+
+  a.navbar-brand.pull-left.padding-0.logo-gib{
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .padding-top-header-ul{
+    padding-top: 1rem;
+  }
 }
 
 @media (min-width: 992px){
@@ -199,5 +215,10 @@ footer{
 
   nav.padding-nav{
     padding: 20px;
+  }
+
+  a.navbar-brand.pull-left.padding-0.logo-gib{
+    width: 6.5rem;
+    height: 6.5rem;
   }
 }
