--- a/views/services-products.html
+++ b/views/services-products.html
@@ -26,19 +26,19 @@
            <div class="row">
              <div class="col-xs-12">
                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+                <div class="navbar-header padding-navbar">
                   <button class="collapsed navbar-toggle btn-no-border btn-no-background" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left padding-0" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
+                 <a class="navbar-brand pull-left padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
-                 <ul class="nav navbar-nav navbar-right">
+                 <ul class="nav navbar-nav navbar-right padding-top-header-ul">
                    <li class="dropdown">
                      <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
