--- a/views/services-products.html
+++ b/views/services-products.html
@@ -21,7 +21,7 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav nav-scroll-plugin" data-scroll-header>
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
@@ -33,19 +33,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
+                 <a class="navbar-brand pull-left padding-0 logo-gib" href="index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
                  <ul class="nav navbar-nav navbar-right padding-top-header-ul">
                    <li class="dropdown">
-                     <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
+                     <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-scroll><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
                         <li><a href="#" class="blue" id="about-gs" data-scroll><strong>Sobre Gib-Solutions</strong></a></li>
                         <li><a href="#" class="blue" id="about-us-gs" data-scroll><strong>¿Quiénes somos?</strong></a></li>
-                        <li><a href="##" class="blue" id="objectives-gs" data-scroll><strong>Nuestros objetivos</strong></a></li>
-                        <li><a href="##" class="blue" id="clients-gs" data-scroll><strong>Nuestros clientes</strong></a></li>
+                        <li><a href="#" class="blue" id="objectives-gs" data-scroll><strong>Nuestros objetivos</strong></a></li>
+                        <li><a href="#" class="blue" id="clients-gs" data-scroll><strong>Nuestros clientes</strong></a></li>
                       </ul>
                    </li>
                    <li><a href="services-products.html" class="blue" data-scroll><strong>Nuestros servicios y productos</strong></a></li>
@@ -59,7 +59,7 @@
     </header>
 
     <!--Sección servicios-->
-    <section class="margin-section content-box">
+    <section class="margin-section-products content-box">
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
@@ -151,13 +151,7 @@
     <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.js"></script>
     <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
-    <!--Scroll-->
-    <script src="vendor/smooth-scroll.min.js"></script>
-    <script>
-       var scroll = new SmoothScroll('a[href*="#"]');
-	     var scroll = new SmoothScroll('.some-selector',{
-		   header: '[data-scroll-header]'
-	     });
-    </script>
+
+
   </body>
 </html>
