Modificando estilos segunda vista

--- a/views/services-products.html
+++ b/views/services-products.html
@@ -21,7 +21,7 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav nav-scroll-plugin" data-scroll-header>
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
