--- a/views/services-products.html
+++ b/views/services-products.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left padding-0 logo-gib" href="index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
+                 <a class="navbar-brand pull-left padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
