--- a/css/main.css
+++ b/css/main.css
@@ -69,9 +69,9 @@ img.filter-img{
   -webkit-filter: contrast(60%);
 }
 /*Estilos para navbar*/
-a.navbar-brand.pull-left.padding-0.logo-gib{
-  width: 5rem;
-  height: 5rem;
+a.navbar-brand.padding-0.logo-gib{
+  width: 3rem;
+  height: 3rem;
 }
 button.navbar-toggle.btn-no-background, .navbar-toggle.navbar-toggle:hover{
   background-color: inherit;
@@ -82,7 +82,7 @@ button.btn-no-background.navbar-toggle.navbar-toggle:hover, .navbar-toggle.navba
 button.navbar-toggle.btn-no-border, .navbar-toggle:focus{
   border-color: transparent;
 }
-nav.navbar.navbar-default.nav-margin-btn-0{
+nav.navbar.navbar-expand-lg.nav-margin-btn-0{
   border-color: transparent;
   margin-bottom: 0px;
 }
@@ -92,7 +92,7 @@ nav{
 nav.padding-nav{
   padding: 10px;
 }
-a.navbar-brand.pull-left.padding-0{
+a.navbar-brand.padding-0{
   padding: 0;
 }
 
@@ -107,23 +107,23 @@ nav#navbar{
 .blue{
 color: rgb(59,89,152);
 }
-.navbar-default .navbar-nav>li>a.blue{
+.navbar-expand-lg .navbar-nav>li>a.blue{
   color: rgb(59,89,152);
 }
-.navbar-default .navbar-nav>li>a.blue:hover{
+.navbar-expand-lg .navbar-nav>li>a.blue:hover{
   color: #000;
 }
-.navbar-default .navbar-toggle .icon-bar.color-blue{
+.navbar-expand-lg .navbar-toggle .icon-bar.color-blue{
   background-color: rgb(59,89,152);
 }
-.navbar-default .navbar-nav>.open>a.blue{
+.navbar-expand-lg .navbar-nav>.open>a.blue{
   color: rgb(59,89,152);
   background-color: transparent;
 }
-.navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a{
+.navbar-expand-lg .navbar-nav>li>a, .navbar-expand-lg .navbar-nav>li>a{
   background-color: transparent;
 }
-.navbar-default .navbar-nav .open .dropdown-menu>li>a.blue{
+.navbar-expand-lg .navbar-nav .open .dropdown-menu>li>a.blue{
   color: rgb(59,89,152);
 }
 /*Estilos hero*/
