--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-  font-weight: 300;
+  font-weight: 200;
   font-family: 'Roboto', sans-serif;
 }
 h1{
@@ -12,17 +12,24 @@ h1{
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 }
 .flex{
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.height-70{
+  height: 70vh;
+}
 .content-box {
-  padding: 30px;
+  padding: 20px;
 }
 .content-max-box{
   padding: 70px;
+}
+.content-padding-image{
+  padding: 30px;
 }
 .content-box-section3{
   padding-right: 30px;
@@ -37,9 +44,7 @@ section.margin-section{
 .center-align{
   text-align: center;
 }
-.justify{
-  text-align: justify;
-}
+
 hr.hr-style-gib{
   border-color: rgba(59,89,152,0.5);
   max-width: 50px;
@@ -68,24 +73,16 @@ img.filter-img{
   filter: contrast(60%);
   -webkit-filter: contrast(60%);
 }
+.margin-btm-30{
+  margin-bottom: 30px;
+}
+
 /*Estilos para navbar*/
 a.navbar-brand.padding-0.logo-gib{
   width: 3rem;
   height: 3rem;
 }
-button.navbar-toggle.btn-no-background, .navbar-toggle.navbar-toggle:hover{
-  background-color: inherit;
-}
-button.btn-no-background.navbar-toggle.navbar-toggle:hover, .navbar-toggle.navbar-toggle:focus{
-  background-color: inherit;
-}
-button.navbar-toggle.btn-no-border, .navbar-toggle:focus{
-  border-color: transparent;
-}
-nav.navbar.navbar-expand-lg.nav-margin-btn-0{
-  border-color: transparent;
-  margin-bottom: 0px;
-}
+
 nav{
    box-shadow: 2px 2px 10px #666;
 }
@@ -95,7 +92,11 @@ nav.padding-nav{
 a.navbar-brand.padding-0{
   padding: 0;
 }
-
+.navbar-fixed-top{
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+}
 /*Efectos en navbar*/
 
 .header .navbar {
@@ -126,24 +127,25 @@ color: rgb(59,89,152);
 .navbar-expand-lg .navbar-nav .open .dropdown-menu>li>a.blue{
   color: rgb(59,89,152);
 }
-/*Estilos hero*/
-section div.container-fluid.container-padding-0, div.col-xs-12.container-padding-0{
-  padding-right: 0;
-  padding-left: 0;
+.navbar-light button.navbar-toggler.border-none{
+  border-color: transparent;
 }
 
-div.row.row-margin-0{
-  margin-right: 0;
-  margin-left: 0;
+/*Estilos hero*/
+section div.col-12.container-padding-0{
+  padding: 0;
 }
-div.item.height-img-movile{
-  height: 80vh;
-}
-div.item.height-img-movile img{
+
+div img.img-fluid.filter-image-responsive{
   height: -webkit-fill-available;
   width: -webkit-fill-available;
 }
 
+
+/*Primera sección*/
+.content-image-about-gib{
+  height: 100%;
+}
 .content-image-about-gib:hover{
   -webkit-transform: scale(0.8);
   -ms-transform: scale(0.8);
@@ -154,7 +156,7 @@ div.item.height-img-movile img{
   border: 4px solid rgba(59,89,152,0.8);
 }
 .padding-second-section{
-  padding: 20px;
+  padding: 55px 20px;
 }
 .card-contact{
   padding: 30px;
@@ -189,9 +191,9 @@ footer{
     justify-content: center;
   }
 
-  a.navbar-brand.pull-left.padding-0.logo-gib{
-    width: 6rem;
-    height: 6rem;
+  a.navbar-brand.padding-0.logo-gib{
+    width: 5rem;
+    height: 5rem;
   }
 
   .padding-top-header-ul{
@@ -213,13 +215,11 @@ footer{
   nav.padding-nav{
     padding: 15px;
   }
-
-  a.navbar-brand.pull-left.padding-0.logo-gib{
-    width: 8rem;
-    height: 8rem;
-  }
-
   .style-box-services {
     height: 280px;
+  }
+
+  .margin-top-70{
+    margin-top: 70px;
   }
 }
