Añadiendo estilos inline

--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <header class="header">
       <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
-        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top"></a>
+        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:5rem; height:5rem;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
