Modificando sección socios

--- a/css/main2.css
+++ b/css/main2.css
@@ -24,13 +24,16 @@
 }
 
 .background-pandorafms{
-  background-color: rgb(127,181,40);
-  padding: 10px 10px;
-  color: white;
   margin-bottom: 20px;
 }
 .background-pandorafms h2{
+  color: rgb(127,181,40);
   font-weight: bold;
+}
+hr.hr-style-partners{
+  border-color: rgb(127,181,40);
+  max-width: 100%;
+  border-width: 4px;
 }
 
 @media (min-width: 1200px){
