--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <header class="header">
       <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
-        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:5rem; height:5rem;"></a>
+        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -89,22 +89,24 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-md-4 offset-md-2">
+          <div class="col-12 col-md-8 offset-md-2 col-lg-4 offset-lg-2">
             <div class="content-box">
               <div class="flex-direction-column style-box-products">
-                <img class="img-responsive" src="../assets/images/pandora.png" alt="PandoraFMS">
+                <img class="img-fluid" src="../assets/images/pandora.png" alt="PandoraFMS">
                 <h2>¿Qué es Pandora FMS?</h2>
                 <br>
                 <p class="center-align">Pandora FMS es un software de monitorización para gestión de infraestructura TI. Esto incluye equipamiento de red, servidores Windows y Unix, infraestructura virtualizada y todo tipo de aplicaciones. Pandora FMS tiene multitud de funcionalidades, lo cual lo convierte en un software de nueva generación que cubre todos los aspectos de monitorización necesarios para su organización.</p>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-8 offset-md-2 col-lg-4 offset-lg-0">
             <div class="content-box">
               <div class="flex-direction-column">
-                <img class="img-responsive" src="../assets/images/nagios.png" alt="Nagios">
+                <img class="img-fluid" src="../assets/images/pandora-certified.png" alt="Pandora Certified">
                 <div class="background-pandorafms">
+                  <hr class="hr-style-partners">
                   <h2 class="center-align">Partners certificados</h2>
+                  <hr class="hr-style-partners">
                 </div>
                 <p class="center-align">Somos partners certificados de Pandora FMS. La plataforma de monitoreo de redes e infraestructura de TI más completa del mercado. Esto incluye equipamiento de red, servidores Windows y Unix, infraestructura virtualizada y todo tipo de aplicaciones. Pandora FMS tiene multitud de funcionalidades, lo cual lo convierte en un software de nueva generación que cubre todos los aspectos de monitorización necesarios para su organización.
                   Nuestros expertos están certificados para su debida instalación, configuración y capacitación con el objeto de brindar una solución integral en lo que se refiere a monitoreo de redes e infraestructura.
