--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ h1{
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  height: 100%;
 }
 .flex{
   display: flex;
@@ -24,6 +25,7 @@ h1{
 }
 .content-box {
   padding: 20px;
+  height: 100%;
 }
 .content-max-box{
   padding: 70px;
