Agregando estilos inline en segunda vista

--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <header class="header">
       <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
-        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
+        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:5rem;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -104,9 +104,14 @@
               <div class="flex-direction-column">
                 <img class="img-fluid" src="../assets/images/pandora-certified.png" alt="Pandora Certified">
                 <div class="background-pandorafms">
-                  <hr class="hr-style-partners">
-                  <h2 class="center-align">Partners certificados</h2>
-                  <hr class="hr-style-partners">
+                  <hr style="border-color: rgb(127,181,40);
+                  max-width: 100%;
+                  border-width: 4px;">
+                  <h2 class="center-align" style="color: rgb(127,181,40);
+                  font-weight: bold;">Partners certificados</h2>
+                  <hr style="border-color: rgb(127,181,40);
+                  max-width: 100%;
+                  border-width: 4px;">
                 </div>
                 <p class="center-align">Somos partners certificados de Pandora FMS. La plataforma de monitoreo de redes e infraestructura de TI más completa del mercado. Esto incluye equipamiento de red, servidores Windows y Unix, infraestructura virtualizada y todo tipo de aplicaciones. Pandora FMS tiene multitud de funcionalidades, lo cual lo convierte en un software de nueva generación que cubre todos los aspectos de monitorización necesarios para su organización.
                   Nuestros expertos están certificados para su debida instalación, configuración y capacitación con el objeto de brindar una solución integral en lo que se refiere a monitoreo de redes e infraestructura.
