--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -114,8 +114,9 @@
                   border-width: 4px;">
                 </div>
                 <p class="center-align">Somos partners certificados de Pandora FMS. La plataforma de monitoreo de redes e infraestructura de TI más completa del mercado. Esto incluye equipamiento de red, servidores Windows y Unix, infraestructura virtualizada y todo tipo de aplicaciones. Pandora FMS tiene multitud de funcionalidades, lo cual lo convierte en un software de nueva generación que cubre todos los aspectos de monitorización necesarios para su organización.
-                  Nuestros expertos están certificados para su debida instalación, configuración y capacitación con el objeto de brindar una solución integral en lo que se refiere a monitoreo de redes e infraestructura.
                 </p>
+                <br>
+                <p class="center-align">Nuestros expertos están certificados para su debida instalación, configuración y capacitación con el objeto de brindar una solución integral en lo que se refiere a monitoreo de redes e infraestructura.</p>
               </div>
             </div>
           </div>
