--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
     <!-- Mi css -->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/main2.css">
@@ -21,7 +22,7 @@
     <!--Navbar-->
     <header class="header">
       <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
-        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:5rem;"></a>
+        <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -136,6 +137,7 @@
 
     <script type="text/javascript" src="../vendor/jQuery/jquery-3.2.1.min.js"></script>
     <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="../vendor/smooth-scroll.min.js"></script>
     <script>
