--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -59,20 +59,26 @@
             <br>
           </div>
         </div>
-        <div class="row margin-top-70">
+        <div class="row margin-top-70 tile">
           <div class="col-12 col-md-4">
-            <div class="flex-direction-column style-box-services">
-              <h3 class="center-align letter-services">Soporte técnico.</h3>
+            <div class="style-box-services img-fluid" style="background-image: url('../assets/images/soporte.jpg')">
+              <div class="details">
+                <span class="title">Soporte técnico</span>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4">
-            <div class="flex-direction-column style-box-services">
-              <h3 class="center-align letter-services">Consultoría TI.</h3>
+            <div class="style-box-services img-fluid" style="background-image: url('../assets/images/consultoria.jpg')">
+              <div class="details">
+                <span class="title">Consultoría TI</span>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4">
-            <div class="flex-direction-column style-box-services">
-              <h3 class="center-align letter-services">Desarrollo de software.</h3>
+            <div class="style-box-services img-fluid" style="background-image: url('../assets/images/desarrollo.jpg')">
+              <div class="details">
+                <span class="title">Desarrollo de software</span>
+              </div>
             </div>
           </div>
         </div>
@@ -92,8 +98,10 @@
         <div class="row">
           <div class="col-12 col-md-8 offset-md-2 col-lg-4 offset-lg-2">
             <div class="content-box">
-              <div class="flex-direction-column style-box-products">
-                <img class="img-fluid" src="../assets/images/pandora.png" alt="PandoraFMS">
+              <div class="flex-direction-column style-box-products zoom-effect-partners">
+                <div class="box-pandora">
+                  <img class="img-fluid pandorafms" src="../assets/images/pandora.png" alt="PandoraFMS">
+                </div>
                 <h2>¿Qué es Pandora FMS?</h2>
                 <br>
                 <p class="center-align">Pandora FMS es un software de monitorización para gestión de infraestructura TI. Esto incluye equipamiento de red, servidores Windows y Unix, infraestructura virtualizada y todo tipo de aplicaciones. Pandora FMS tiene multitud de funcionalidades, lo cual lo convierte en un software de nueva generación que cubre todos los aspectos de monitorización necesarios para su organización.</p>
@@ -102,8 +110,10 @@
           </div>
           <div class="col-12 col-md-8 offset-md-2 col-lg-4 offset-lg-0">
             <div class="content-box">
-              <div class="flex-direction-column">
-                <img class="img-fluid" src="../assets/images/pandora-certified.png" alt="Pandora Certified">
+              <div class="flex-direction-column zoom-effect-partners">
+                <div class="box-pandora">
+                  <img class="img-fluid pandorafms" src="../assets/images/pandora-certified.png" alt="Pandora Certified">
+                </div>
                 <div class="background-pandorafms">
                   <hr style="border-color: rgb(127,181,40);
                   max-width: 100%;
