--- a/css/main2.css
+++ b/css/main2.css
@@ -5,13 +5,60 @@
 }
 
 .style-box-services{
-  background-color: rgba(59,89,152,0.8);
-  border: 2px solid rgba(59,89,152,0.8);
-  border-radius: 50px;
+  opacity: .99;
+  overflow: hidden;
+  border-radius: 10px;
   margin-bottom: 30px;
   height: 220px;
-  padding: 10px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.05);
+  animation-name: fadeIn;
+  animation-duration: 1000ms;
+  animation-timing-function: ease-in-out;
+  animation-delay: 500ms;
+  animation-iteration-count: 1;
+  animation-direction: forwards;
+  background-position: center;
+  background-size: cover;
 }
+
+.details {
+  font-size: 16px;
+  padding: 20px;
+  color: #fff;
+  bottom: 0px;
+  /*left: 0;*/
+  z-index: 3;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  transform: translateY(15px);
+  justify-content: center;
+  align-items: center;
+  transition-property: opacity, transform;
+  transition-duration: 500ms;
+  background: linear-gradient(transparent, hsla(000, 000%, 000%, 1));
+}
+
+.details .title {
+  line-height: 1;
+  font-weight: 600;
+  font-size: 2em;
+}
+.style-box-services:hover:before,
+.style-box-services:hover .details {
+  opacity: 1;
+}
+.style-box-services:hover .details {
+  top: 0;
+  transform: translateY(0);
+}
+.style-box-services:hover .title {
+  -webkit-transition-delay: 0.10s;
+  transition-delay: 0.10s;
+}
+
 .letter-services{
   color: white;
   font-weight: bold;
@@ -26,7 +73,19 @@
 .background-pandorafms{
   margin-bottom: 20px;
 }
-
+.zoom-effect-partners {
+    width: fit-content;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.box-pandora img {
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+.zoom-effect-partners:hover .box-pandora img{
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
+}
 @media (min-width: 1200px){
   .margin-top-70{
     margin-top: 70px;
