--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.css">
     <!-- Mi css -->
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/main2.css">
@@ -21,7 +21,7 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
+      <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav">
         <a class="navbar-brand padding-0 logo-gib" href="../index.html"><img src="../assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,16 +33,16 @@
                 <strong>Sobre Gib-Solutions</strong>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item blue" href="#" id="about-us-gs" data scroll><strong>¿Quiénes somos?</strong></a>
-                <a class="dropdown-item blue" href="#" id="objectives-gs" data-scroll><strong>Nuestros objetivos</strong></a>
-                <a class="dropdown-item blue" href="#" id="clients-gs" data-scroll><strong>Nuestros clientes</strong></a>
+                <a class="dropdown-item blue" href="#about-us" id="about-us-gs"><strong>¿Quiénes somos?</strong></a>
+                <a class="dropdown-item blue" href="#our-objectives" id="objectives-gs"><strong>Nuestros objetivos</strong></a>
+                <a class="dropdown-item blue" href="#our-clients" id="clients-gs"><strong>Nuestros clientes</strong></a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="services-partners.html" data-scroll><strong>Nuestros servicios y socios</strong></a>
+              <a class="nav-link blue" href="#"><strong>Nuestros servicios y socios</strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="#" id="contact-us-gs" data-scroll><strong>Contáctenos</strong></a>
+              <a class="nav-link blue" href="#contact-us" id="contact-us-gs"><strong>Contáctenos</strong></a>
             </li>
           </ul>
         </div>
@@ -146,15 +146,9 @@
     </footer>
 
     <script type="text/javascript" src="../vendor/jQuery/jquery-3.2.1.min.js"></script>
-    <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script ype="text/javascript" src="../vendor/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
-    <script type="text/javascript" src="../vendor/smooth-scroll.min.js"></script>
-    <script>
-       var scroll = new SmoothScroll('a[href*="#"]', {
-         header: '[data-scroll-header]'
-       });
-    </script>
-
+    t<script type="text/javascript" src="../js/views.js"></script>
   </body>
 </html>
