--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -135,6 +135,111 @@
       </div>
     </section>
 
+    <!--sección funcionalidades-->
+    <section class="">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h5 class="center-align">Con una sola herramienta puede monitorizar todos sus dispositivos, servidores, aplicaciones, servicios o procesos de negocio, del tipo que sean.</h5>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-5 offset-1">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-1.jpg" alt="Redes" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Redes</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Control total de todo tipo de dispositivos de red sin importar modelo o tamaño.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-2.jpg" alt="Servidores" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Servidores</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Planifique su capacidad y monitorice desde el hardware al sistema operativo.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5 offset-1">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-3.jpg" alt="Aplicaciones" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Aplicaciones</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Plugins configurados para obtener métricas de rendimiento de las tecnologías estándar del mercado.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-4.jpg" alt="Experiencia" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Experiencia de usuario</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Realice pruebas transaccionales de sus aplicaciones web tal y como lo harían sus usuarios.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-5 offset-1">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-5.jpg" alt="Logs" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Logs</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Obtenga logs de SO y aplicación desde los agentes de monitorización.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-6.jpg" alt="Cloud" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Cloud</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Unifique la monitorización de todos sus entornos distribuidos en una única herramienta.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5 offset-1">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-7.jpg" alt="SAP" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">SAP</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Métricas específicas con nuestro plugin certificado por SAP para R3 y SAP Hana.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="">
+              <div class="flex-direction-row">
+                <a href="#"><img class="card-img-top" src="../assets/images/icono-8.jpg" alt="Control" style="width:70%;"></a>
+                <h6 class="d-inline-block align-items-center" style="width:30%;">Control remoto</h6>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Acceso remoto completo a sus servidores y estaciones de trabajo desde nuestra consola.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="content-box">
       <div class="container-fluid">
         <div class="row">
@@ -149,6 +254,6 @@
     <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
-    t<script type="text/javascript" src="../js/views.js"></script>
+    <script type="text/javascript" src="../js/views.js"></script>
   </body>
 </html>
